# AI_EmotionPanel

./: .gitignore  .mcp.json  CLAUDE.md  README.md  start.bat
assets/characters/default/: lines.json
core/hooks/: set-emotion.sh
core/server/: index.js  package.json  stdio.js
viewers/tauri/: package-lock.json  package.json
viewers/tauri/src/: index.html  main.js  style.css
viewers/tauri/src-tauri/: Cargo.toml  tauri.conf.json
viewers/tauri/src-tauri/capabilities/: default.json
viewers/tauri/src-tauri/icons/: icon.icns
viewers/tauri/src-tauri/src/: main.rs
viewers/vscode/: package-lock.json  package.json
viewers/vscode/src/: extension.ts
viewers/web/: index.html
