[package]
name = "claude-emotion-viewer"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
